--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #f8f8f8;
 }
 
-.game-container {
+.container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
@@ -15,9 +15,29 @@ body {
   grid-template-columns: repeat(7, 60px); /* 7列 */
   grid-template-rows: repeat(6, 60px);    /* 6行 */
   gap: 5px;
-  background-color: #004080;
+  background-color: #eaeaea;
   padding: 10px;
   border-radius: 10px;
+}
+
+.controls {
+  margin-top: 20px;
+  background-color: #eaeaea;
+  padding: 20px;
+  border-radius: 10px;
+  min-width: 150px;
+  text-align: left;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+
+.status {
+  margin-top: 20px;
+  background-color: #eaeaea;
+  padding: 20px;
+  border-radius: 10px;
+  min-width: 150px;
+  text-align: left;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
 .cell {
@@ -34,6 +54,6 @@ body {
   background-color: red;
 }
 
-.cell.yellow {
-  background-color: yellow;
+.cell.blue {
+  background-color: blue;
 }
