--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .board {
@@ -23,9 +24,11 @@ body {
 }
 
 #win-line {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   pointer-events: none; /* 不干扰点击 */
 }
