feat：前后端分离、序数标记、修复已知bug

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -68,6 +68,18 @@ body {
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
+.move-number {
+  position: absolute;
+  font-size: 2rem;
+  color: #fff;
+  text-shadow: 1px 1px 3px black;
+  font-weight: bold;
+  pointer-events: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .cell {
   width: 60px;
   height: 60px;
