--- a/docs/style.css
+++ b/docs/style.css
@@ -58,7 +58,7 @@ body {
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
-.status {
+.roomscontrol {
   margin-top: 20px;
   background-color: #eaeaea;
   padding: 20px;
@@ -130,6 +130,7 @@ body {
   margin-bottom: 10px;
 }
 .player-b {
+  min-width: 30px;
   background: linear-gradient(to right, #4facfe, #00f2fe); /* 蓝色系 */
   text-align: left;
   padding-left: 10px;
@@ -138,6 +139,7 @@ body {
   font-weight: bold;
 }
 .player-a {
+  min-width: 30px;
   background: linear-gradient(to right, #f093fb, #f5576c); /* 红色系 */
   text-align: right;
   padding-right: 10px;
