--- a/docs/style.css
+++ b/docs/style.css
@@ -58,7 +58,7 @@ body {
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
-.status {
+.roomscontrol {
   margin-top: 20px;
   background-color: #eaeaea;
   padding: 20px;
@@ -144,4 +144,13 @@ body {
   color: white;
   line-height: 30px;
   font-weight: bold;
+}
+
+#room-id-input {
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
